Initial commit - Added Chat Agent Platform workspace

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=https://contentstack-chat.preview.emergentagent.com
+REACT_APP_BACKEND_URL=https://pedantic-lederberg.preview.emergentagent.com
 WDS_SOCKET_PORT=443
